fixing login and create account spacing so it fits on standard page better

--- a/createaccountstyle.css
+++ b/createaccountstyle.css
@@ -49,85 +49,85 @@
 #emailtext {
     position: fixed;
     width: 100%;
-    top:120px;
+    top:100px;
     left: 25%;
 }
 #email{
     position: fixed;
     width: 50%;
-    top: 150px;
+    top: 120px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #usernametext {
     position: fixed;
     width: 100%;
-    top:220px;
+    top:190px;
     left: 25%;
 }
 #username{
     position: fixed;
     width: 50%;
-    top: 250px;
+    top: 210px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #nametext {
     position: fixed;
     width: 100%;
-    top:320px;
+    top:280px;
     left: 25%;
 }
 #name {
     position: fixed;
     width: 50%;
-    top: 350px;
+    top: 300px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #birthtext {
     position: fixed;
     width: 100%;
-    top:420px;
+    top:370px;
     left: 25%;
 }
 #birth {
     position: fixed;
     width: 50%;
-    top: 450px;
+    top: 390px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #passwordtext {
     position: fixed;
     width: 100%;
-    top:520px;
+    top:460px;
     left: 25%;
 }
 #password {
     position: fixed;
     width: 50%;
-    top: 550px;
+    top: 480px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #repasswordtext {
     position: fixed;
     width: 100%;
-    top: 620px;
+    top: 540px;
     left: 25%;
 }
 #repassword {
     position: fixed;
     width: 50%;
-    top: 650px;
+    top: 560px;
     left: 25%;
     border: 3px solid lightgrey;
 }
 #inputbutton {
     position: fixed;
     width: 50%;
-    top: 720px;
+    top: 620px;
     left: 25%;
     text-align: center;
     background-color: slateblue;
